// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GameState > should process game state 1`] = `
"Move: 3

Players:
Black: undefined undefined
White: undefined undefined

Captures:
Black: 0
White: 0

Board:
🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 2`] = `
"Move: 3

Players:
Black: undefined undefined
White: undefined undefined

Captures:
Black: 0
White: 0

Board:
🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 3`] = `
"Move: 50

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️⚫⚫⚫⚫⚫🔴️🔵️⚫⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔴️🔵️🔴️⚫⚫⚫⚫⚫🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️⚫⚫⚫⚫⚫🔴️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔴️⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔴️⚫⚫
⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 4`] = `
"Move: 100

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔵️🔴️🔵️⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️⚫🔴️🔴️🔵️🔵️🔴️🔵️⚫⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔴️🔵️🔴️⚫⚫🔵️🔴️🔴️🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️⚫⚫🔴️🔵️⚫🔴️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔴️🔴️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔴️🔴️🔴️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔵️🔴️⚫🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔴️⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔴️🔴️🔴️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔴️⚫⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫🔴️🔴️🔵️⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔴️⚫🔴️🔵️⚫
⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫🔴️🔵️🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔴️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 5`] = `
"Move: 150

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 0
White: 1

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔴️🔵️🔵️🔴️🔵️⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️⚫🔴️🔴️🔵️🔵️🔴️🔵️⚫⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔴️🔵️🔴️⚫⚫🔵️🔴️🔴️🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️⚫⚫🔴️🔵️⚫🔴️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔵️🔴️🔴️🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫🔴️🔵️🔴️🔴️🔴️🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫🔴️🔵️⚫🔵️⚫🔴️🔴️🔵️🔴️⚫🔵️⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️🔵️⚫⚫🔴️⚫⚫🔵️⚫🔴️⚫⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️🔴️🔴️🔴️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫⚫🔴️🔵️🔵️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫🔴️⚫⚫⚫⚫
⚫⚫⚫🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔵️🔴️🔴️⚫🔴️🔴️🔵️⚫
⚫⚫🔴️⚫⚫🔴️⚫🔴️🔵️⚫🔴️🔴️⚫⚫⚫⚫⚫🔵️⚫
⚫⚫🔵️🔴️⚫🔵️🔴️🔴️🔴️🔵️⚫⚫🔴️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️⚫⚫🔵️🔴️🔵️🔴️🔵️⚫⚫🔴️🔵️🔴️⚫🔴️🔵️⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔵️⚫⚫🔴️🔵️🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔴️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 6`] = `
"Move: 200

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 3
White: 9

Board:
⚫⚫⚫⚫⚫⚫🔵️⚫🔵️⚫⚫🔴️🔴️🔴️🔵️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫⚫🔴️🔵️🔵️⚫🔵️⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️🔴️🔴️🔴️🔵️🔵️🔴️🔵️⚫⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔴️🔵️🔴️⚫🔵️🔵️🔴️🔴️🔴️🔵️⚫⚫
⚫🔵️⚫🔵️⚫⚫⚫🔴️🔴️🔴️⚫🔵️🔴️⚫🔴️🔴️🔵️⚫⚫
⚫⚫🔵️🔴️⚫🔵️⚫⚫⚫⚫⚫🔵️🔴️🔵️⚫🔴️🔴️🔵️⚫
⚫🔵️🔵️🔴️⚫🔵️⚫⚫🔴️🔵️🔴️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫
⚫🔴️🔵️🔴️⚫🔴️⚫🔴️⚫🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔵️🔵️⚫
⚫🔴️🔴️⚫⚫⚫⚫🔴️⚫🔴️🔵️🔴️🔵️🔵️🔵️🔴️🔴️⚫⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️🔴️🔴️🔴️🔴️
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️
⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫🔴️⚫⚫⚫⚫
🔴️⚫⚫🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔵️🔴️🔴️⚫🔴️🔴️🔵️⚫
🔵️🔴️🔴️⚫⚫🔴️⚫🔴️🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫🔵️⚫
🔵️🔵️🔵️🔴️⚫🔵️🔴️🔴️🔴️🔵️⚫⚫🔴️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️⚫⚫🔵️🔴️🔵️🔴️🔵️⚫⚫🔴️🔵️🔴️🔵️⚫🔵️⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔵️⚫⚫🔴️🔵️🔴️🔴️🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔴️🔵️🔵️🔴️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 7`] = `
"Move: 250

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 6
White: 17

Board:
⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔴️⚫🔴️🔴️🔴️🔵️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫⚫🔴️🔵️🔵️⚫🔵️⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️🔴️🔴️🔴️🔵️🔵️🔴️🔵️⚫⚫
⚫⚫⚫🔵️🔵️🔵️🔵️🔴️🔵️🔴️⚫🔵️🔵️🔴️🔴️🔴️🔵️⚫⚫
⚫🔵️⚫🔵️🔴️🔵️🔴️🔴️🔴️🔴️⚫🔵️🔴️⚫🔴️🔴️🔵️🔴️⚫
🔵️⚫🔵️🔴️🔴️🔵️🔴️🔵️⚫🔴️⚫🔵️🔴️🔵️⚫🔴️🔴️🔵️⚫
🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔵️🔴️⚫🔴️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫
🔴️🔴️🔵️🔴️🔴️🔴️🔴️🔴️⚫🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔵️🔵️🔵️
⚫🔴️🔴️⚫⚫⚫⚫🔴️⚫🔴️🔵️🔴️🔵️🔵️🔵️🔴️🔴️🔴️🔵️
⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️🔴️🔴️🔴️🔴️
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️
⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫🔴️⚫🔵️⚫⚫
🔴️⚫🔴️🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔵️🔴️🔴️🔴️🔴️🔴️🔵️⚫
🔵️🔴️🔴️🔴️🔴️🔴️⚫🔴️🔵️🔴️🔴️🔴️🔴️🔵️🔵️⚫⚫🔵️⚫
🔵️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️🔵️🔵️⚫🔴️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️🔵️⚫🔵️🔴️🔵️🔴️🔵️🔵️🔴️🔴️🔵️🔴️🔵️⚫🔵️⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔵️🔵️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔴️⚫⚫🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️🔴️⚫🔵️⚫⚫⚫
"
`;

exports[`GameState > should process game state 8`] = `
"Move: 256

Players:
Black: AaronP 2d
White: U undefined

Captures:
Black: 6
White: 18

Board:
⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫⚫🔴️🔵️🔵️⚫🔵️⚫
⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️🔴️🔴️🔴️🔵️🔵️🔴️🔵️⚫⚫
⚫⚫⚫🔵️🔵️🔵️🔵️🔴️🔵️🔴️⚫🔵️🔵️🔴️🔴️🔴️🔵️🔵️⚫
⚫🔵️⚫🔵️🔴️🔵️🔴️🔴️🔴️🔴️⚫🔵️🔴️⚫🔴️🔴️🔵️🔴️⚫
🔵️⚫🔵️🔴️🔴️🔵️🔴️🔵️⚫🔴️⚫🔵️🔴️🔵️⚫🔴️🔴️🔵️⚫
🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔵️🔴️⚫🔴️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫
🔴️🔴️🔵️🔴️🔴️🔴️🔴️🔴️⚫🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔵️🔵️🔵️
⚫🔴️🔴️⚫⚫⚫⚫🔴️⚫🔴️🔵️🔴️🔵️🔵️🔵️🔴️🔴️🔴️🔵️
⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️🔴️🔴️🔴️🔴️
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️
⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫🔴️⚫🔵️⚫⚫
🔴️⚫🔴️🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔵️🔴️🔴️🔴️🔴️🔴️🔵️⚫
🔵️🔴️🔴️🔴️🔴️🔴️⚫🔴️🔵️🔴️🔴️🔴️🔴️🔵️🔵️⚫🔵️🔵️⚫
🔵️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️🔵️🔵️⚫🔴️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️🔵️⚫🔵️🔴️🔵️🔴️🔵️🔵️🔴️🔴️🔵️🔴️🔵️⚫🔵️⚫
⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔵️🔵️🔴️🔴️⚫🔴️🔴️🔴️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔴️⚫⚫🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️🔴️⚫🔵️⚫⚫⚫
"
`;

exports[`GameState > should process game state 9`] = `
"Move: 50

Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 0
White: 1

Board:
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔵️🔵️⚫
⚫🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️⚫
⚫🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫
⚫🔴️🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔵️🔵️🔴️⚫🔴️⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫⚫
⚫⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 10`] = `
"Move: 100

Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 4
White: 1

Board:
⚫⚫🔴️⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔴️🔴️🔴️🔵️🔵️⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️⚫⚫🔵️⚫🔵️🔵️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️🔴️🔴️⚫⚫⚫⚫🔵️⚫🔴️🔴️🔴️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫
⚫🔴️🔵️⚫🔵️🔴️🔵️⚫⚫⚫🔴️⚫🔴️⚫⚫⚫🔵️⚫⚫
⚫🔵️🔵️🔵️🔴️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫🔴️⚫⚫🔵️⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫🔵️⚫🔵️⚫🔵️⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫🔵️⚫🔵️⚫🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔵️⚫🔵️🔵️🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔵️🔵️🔴️🔴️🔴️⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫⚫
⚫⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 11`] = `
"Move: 150

Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 5
White: 3

Board:
⚫⚫🔴️⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔴️🔴️🔴️🔵️🔵️⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️⚫⚫🔵️⚫🔵️🔵️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️🔴️🔴️🔴️⚫⚫⚫🔵️⚫🔴️🔴️🔴️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️⚫🔴️⚫🔴️🔵️⚫🔵️🔴️⚫⚫🔴️🔴️🔴️
⚫🔴️🔵️⚫🔵️🔴️🔵️⚫🔴️🔵️⚫🔵️🔴️⚫🔴️⚫🔵️🔵️⚫
⚫🔵️🔵️🔵️🔴️🔵️🔵️⚫🔴️🔵️🔵️⚫🔴️🔴️⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫🔴️⚫🔵️🔵️⚫🔴️⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫🔴️⚫🔵️🔵️🔵️🔴️🔵️⚫⚫
⚫🔴️🔴️⚫🔴️⚫⚫🔵️⚫⚫⚫🔵️⚫🔴️🔵️🔵️🔵️⚫⚫
⚫🔵️⚫⚫⚫⚫🔵️⚫🔵️⚫🔵️⚫⚫⚫⚫🔴️🔴️⚫⚫
⚫⚫⚫🔵️⚫🔵️⚫🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔵️⚫🔵️🔵️🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔵️🔵️🔴️🔴️🔴️⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫⚫
⚫⚫⚫⚫🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫🔵️⚫🔵️🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 12`] = `
"Move: 200

Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 5
White: 3

Board:
⚫⚫🔴️⚫⚫⚫⚫🔵️⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔴️🔴️🔴️🔵️🔵️⚫🔵️🔵️🔴️🔵️🔵️⚫🔵️⚫⚫⚫⚫
⚫🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔴️🔵️🔵️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️🔴️🔴️🔴️⚫⚫⚫🔵️🔵️🔴️🔴️🔴️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️⚫🔴️⚫🔴️🔵️⚫🔵️🔴️⚫⚫🔴️🔴️🔴️
⚫🔴️🔵️⚫🔵️🔴️🔵️⚫🔴️🔵️⚫🔵️🔴️⚫🔴️⚫🔵️🔵️⚫
⚫🔵️🔵️🔵️🔴️🔵️🔵️⚫🔴️🔵️🔵️⚫🔴️🔴️⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫⚫⚫🔴️⚫⚫⚫🔵️🔴️🔴️⚫🔴️🔴️
⚫🔵️⚫🔵️🔴️⚫⚫⚫⚫⚫⚫🔴️⚫🔵️🔵️⚫🔴️🔴️🔵️
⚫🔴️⚫🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔴️🔴️⚫🔵️🔵️
⚫⚫⚫⚫🔴️⚫🔴️⚫🔴️🔴️🔴️⚫🔵️🔵️🔵️🔴️🔵️⚫⚫
🔴️🔴️🔴️⚫🔴️⚫⚫🔵️⚫🔵️🔵️🔵️⚫🔴️🔵️🔵️🔵️🔵️⚫
🔴️🔵️🔵️⚫⚫⚫🔵️⚫🔵️⚫🔵️⚫⚫⚫⚫🔴️🔴️🔵️🔵️
🔵️🔵️⚫🔵️⚫🔵️⚫🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫🔴️🔴️🔵️
⚫⚫⚫⚫🔵️⚫🔵️🔵️🔴️⚫🔵️⚫⚫⚫⚫⚫🔴️🔵️🔵️
⚫⚫⚫🔵️🔵️🔵️🔴️🔴️🔴️⚫🔵️🔵️⚫🔵️🔴️⚫🔴️🔴️🔴️
⚫⚫⚫⚫🔵️🔴️⚫⚫⚫🔴️🔵️🔴️🔵️🔵️🔴️⚫⚫⚫⚫
⚫⚫🔵️⚫🔵️🔴️⚫🔴️⚫🔴️🔴️🔴️🔵️🔴️🔴️⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 13`] = `
"Move: 241

Players:
Black: Koons undefined
White: AaronP 2d

Captures:
Black: 5
White: 3

Board:
⚫⚫🔴️⚫⚫⚫⚫🔵️⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔴️🔴️🔴️🔵️🔵️⚫🔵️🔵️🔴️🔵️🔵️⚫🔵️⚫⚫⚫⚫
⚫🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔴️🔵️🔵️🔵️⚫
⚫🔵️🔴️🔵️⚫🔴️🔴️🔴️🔴️⚫🔴️🔴️🔵️🔵️🔴️🔴️🔴️🔵️🔵️
⚫🔵️🔴️🔵️⚫🔴️⚫🔴️⚫🔴️🔵️🔵️🔵️🔴️⚫⚫🔴️🔴️🔴️
⚫🔴️🔵️🔵️🔵️🔴️🔵️⚫🔴️🔵️⚫🔵️🔴️⚫🔴️⚫🔵️🔵️⚫
⚫🔵️🔵️🔵️🔴️🔵️🔵️⚫🔴️🔵️🔵️🔵️🔴️🔴️⚫⚫⚫⚫⚫
🔵️⚫⚫🔵️🔴️⚫⚫⚫⚫🔴️🔵️🔴️⚫🔵️🔴️🔴️⚫🔴️🔴️
🔴️🔵️⚫🔵️🔴️⚫⚫⚫⚫⚫🔴️🔴️⚫🔵️🔵️⚫🔴️🔴️🔵️
🔴️🔴️🔵️🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫🔴️🔴️🔴️🔴️🔵️🔵️🔵️
⚫⚫🔴️🔴️🔴️🔴️🔴️🔴️🔴️🔴️🔴️🔴️🔵️🔵️🔵️🔴️🔵️⚫⚫
🔴️🔴️🔴️⚫🔴️🔵️🔴️🔵️🔵️🔵️🔵️🔵️⚫🔴️🔵️🔵️🔵️🔵️⚫
🔴️🔵️🔵️🔵️🔴️🔵️🔵️⚫🔵️⚫🔵️⚫⚫🔵️🔴️🔴️🔴️🔵️🔵️
🔵️🔵️⚫🔵️⚫🔵️⚫🔵️🔴️🔴️🔵️⚫⚫🔵️🔵️🔴️🔴️🔴️🔵️
⚫⚫⚫⚫🔵️⚫🔵️🔵️🔴️⚫🔵️⚫⚫🔵️🔴️⚫🔴️🔵️🔵️
⚫⚫⚫🔵️🔵️🔵️🔴️🔴️🔴️⚫🔵️🔵️⚫🔵️🔴️⚫🔴️🔴️🔴️
⚫⚫⚫⚫🔵️🔴️⚫⚫⚫🔴️🔵️🔴️🔵️🔵️🔴️⚫⚫⚫⚫
⚫⚫🔵️⚫🔵️🔴️⚫🔴️⚫🔴️🔴️🔴️🔵️🔴️🔴️⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️🔴️⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔴️⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 14`] = `
"Move: 50

Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 2
White: 0

Board:
⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️🔴️⚫⚫⚫
🔴️🔴️🔴️🔴️🔵️🔵️⚫🔴️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️⚫
🔵️🔵️🔵️🔴️🔵️🔵️🔵️🔴️⚫
⚫🔵️🔴️🔴️🔵️⚫🔵️🔴️⚫
⚫🔵️⚫🔴️🔵️🔵️⚫🔴️⚫
⚫🔵️🔴️⚫🔵️⚫🔵️🔴️⚫
⚫🔵️⚫🔴️🔵️⚫🔵️🔵️⚫
"
`;

exports[`GameState > should process game state 15`] = `
"Move: 55

Players:
Black: Peridothaze ?
White: AaronP 2k

Captures:
Black: 2
White: 0

Board:
⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️🔴️⚫⚫⚫
🔴️🔴️🔴️🔴️🔵️🔵️⚫🔴️⚫
🔴️🔵️🔴️🔴️🔴️🔴️🔵️🔴️⚫
🔵️🔵️🔵️🔴️🔵️🔵️🔵️🔴️⚫
⚫🔵️🔴️🔴️🔵️⚫🔵️🔴️⚫
⚫🔵️⚫🔴️🔵️🔵️⚫🔴️⚫
⚫🔵️🔴️🔵️🔵️⚫🔵️🔴️🔴️
⚫🔵️🔴️🔴️🔵️⚫🔵️🔵️🔵️
"
`;

exports[`GameState > should process game state 16`] = `
"Move: 18

Players:
Black: Black undefined
White: White undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️🔴️⚫🔴️🔵️⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔵️🔵️🔵️🔴️🔴️⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 17`] = `
"Move: 8

Players:
Black: Black undefined
White: White undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 18`] = `
"Move: 50

Players:
Black: Anton Zatonskikh undefined
White: Sorin Gherman undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️⚫⚫🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔴️🔵️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫🔵️🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫⚫⚫⚫
⚫⚫⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫🔵️⚫⚫🔵️⚫🔴️⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️⚫🔵️🔴️⚫🔵️🔴️🔴️⚫🔵️🔴️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫🔵️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 19`] = `
"Move: 100

Players:
Black: Anton Zatonskikh undefined
White: Sorin Gherman undefined

Captures:
Black: 1
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
🔴️⚫⚫⚫🔴️⚫⚫🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫🔴️⚫
🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔵️⚫⚫
⚫🔵️🔵️🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫🔴️🔴️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫🔵️⚫🔵️
⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔵️
⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔵️
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔴️
⚫⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫🔵️🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫⚫⚫⚫
⚫🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫🔵️⚫⚫🔵️🔴️🔴️⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️⚫🔵️🔴️⚫🔵️🔴️🔴️🔴️🔵️🔴️⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔴️🔵️🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 20`] = `
"Move: 117

Players:
Black: Anton Zatonskikh undefined
White: Sorin Gherman undefined

Captures:
Black: 1
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
🔴️🔴️⚫⚫🔴️⚫⚫🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫🔴️⚫
🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔵️🔵️⚫⚫
🔵️🔵️🔵️🔵️🔴️🔴️⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫🔴️🔴️⚫
⚫⚫🔵️🔴️🔵️🔵️🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️⚫
⚫⚫🔵️🔴️⚫🔵️🔴️⚫⚫⚫⚫⚫⚫🔵️🔴️⚫🔵️⚫🔵️
⚫🔵️🔴️🔴️⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️⚫
⚫⚫🔵️⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔵️
⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫🔴️🔴️🔵️
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫🔴️🔵️🔴️
⚫⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫🔵️🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫⚫⚫⚫
⚫🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫🔵️⚫⚫🔵️🔴️🔴️⚫
⚫⚫🔴️⚫⚫⚫⚫🔴️⚫🔵️🔴️⚫🔵️🔴️🔴️🔴️🔵️🔴️⚫
⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫🔵️🔵️🔴️🔵️🔴️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 21`] = `
"Move: 50

Players:
Black: AlphaGo undefined
White: Lee Sedol 9p

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫⚫
⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
⚫🔵️🔵️🔴️🔵️🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫⚫
⚫🔴️🔴️🔵️🔵️⚫🔴️🔵️⚫🔴️⚫⚫🔴️⚫🔴️⚫🔵️⚫⚫
⚫🔴️🔵️🔴️⚫🔵️🔵️⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 22`] = `
"Move: 100

Players:
Black: AlphaGo undefined
White: Lee Sedol 9p

Captures:
Black: 1
White: 1

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫🔴️🔴️🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫🔴️🔵️🔴️🔴️🔵️⚫🔴️⚫⚫🔴️⚫🔴️⚫🔴️⚫
⚫⚫⚫⚫⚫🔵️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️⚫🔵️
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫
⚫🔵️🔴️🔴️🔴️⚫🔵️⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫
⚫🔵️⚫🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔵️⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔵️🔴️🔴️⚫🔴️⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫⚫
⚫🔵️🔴️🔴️🔴️🔵️🔵️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
⚫🔵️🔵️🔴️🔵️🔴️🔵️🔴️⚫⚫🔵️⚫⚫⚫⚫🔴️🔵️⚫⚫
⚫🔴️🔴️🔵️🔵️⚫🔴️🔵️⚫🔴️🔴️⚫🔴️⚫🔴️⚫🔵️⚫⚫
⚫🔴️🔵️🔴️⚫🔵️🔵️⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 23`] = `
"Move: 150

Players:
Black: AlphaGo undefined
White: Lee Sedol 9p

Captures:
Black: 1
White: 2

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔴️🔵️⚫⚫
⚫⚫⚫⚫🔴️🔴️🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫🔴️🔵️🔵️⚫
⚫🔴️🔴️⚫🔴️🔵️🔴️🔴️🔵️⚫🔴️⚫⚫🔴️⚫🔴️🔴️🔴️🔵️
⚫⚫🔵️🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫🔵️🔵️⚫🔵️
⚫⚫🔵️🔴️⚫⚫🔴️🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫
⚫🔵️🔴️🔴️🔴️⚫🔵️🔴️⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️⚫🔴️🔵️🔴️🔴️⚫⚫🔴️⚫⚫🔵️🔵️🔵️⚫⚫
⚫⚫🔵️🔵️⚫⚫🔵️🔴️🔵️🔵️🔵️🔵️🔴️🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫🔵️🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️⚫🔴️⚫🔴️⚫🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔵️🔴️🔴️⚫🔴️🔴️⚫🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫
⚫🔵️🔴️🔴️🔴️🔵️🔵️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫
⚫🔵️🔵️🔴️🔵️🔴️🔵️🔴️⚫⚫🔵️🔵️⚫⚫⚫🔴️🔵️⚫⚫
⚫🔴️🔴️🔵️🔵️⚫🔴️🔵️⚫🔴️🔴️🔴️🔴️🔴️🔴️⚫🔵️⚫⚫
⚫🔴️🔵️🔴️⚫🔵️🔵️⚫⚫⚫⚫🔵️🔵️🔴️🔵️🔵️⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 24`] = `
"Move: 200

Players:
Black: AlphaGo undefined
White: Lee Sedol 9p

Captures:
Black: 3
White: 2

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔵️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔵️🔴️🔵️⚫⚫
⚫⚫⚫⚫🔴️🔴️🔵️🔴️🔴️🔴️⚫⚫🔴️🔵️🔵️🔴️🔵️🔵️⚫
🔴️🔴️🔴️🔴️🔴️🔵️🔴️🔴️🔵️⚫🔴️⚫⚫🔴️🔵️🔴️🔴️🔴️🔵️
🔴️🔵️🔵️🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫🔴️⚫⚫⚫🔴️🔵️⚫
🔵️⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫🔵️🔴️⚫🔵️🔵️⚫🔵️
⚫⚫🔵️🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔴️🔴️🔵️🔵️⚫⚫🔵️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️⚫🔴️🔵️🔵️🔵️🔴️⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️⚫🔴️🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️🔵️🔵️⚫🔵️🔴️🔵️🔵️🔵️🔵️🔴️🔴️🔴️🔴️⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫🔵️🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫⚫🔵️⚫
⚫⚫🔵️⚫🔵️🔴️⚫🔴️⚫🔴️🔴️⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫🔵️🔵️🔵️🔴️🔴️⚫🔴️🔴️⚫🔵️🔴️⚫⚫🔴️⚫🔴️🔵️⚫
⚫🔵️🔴️🔴️🔴️🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫⚫⚫🔵️⚫⚫
🔴️🔵️🔵️🔴️🔵️🔴️🔵️🔴️🔴️🔴️🔵️🔵️🔴️⚫⚫🔴️🔵️⚫⚫
⚫🔴️🔴️🔵️🔵️⚫🔴️🔵️🔵️🔴️🔴️🔴️🔴️🔴️🔴️⚫🔵️⚫⚫
⚫🔴️🔵️🔴️⚫🔵️🔵️⚫⚫⚫⚫🔵️🔵️🔴️🔵️🔵️⚫⚫⚫
⚫⚫⚫🔴️⚫⚫⚫🔵️🔴️⚫🔴️🔵️⚫🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 25`] = `
"Move: 212

Players:
Black: AlphaGo undefined
White: Lee Sedol 9p

Captures:
Black: 5
White: 3

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️🔵️🔵️🔵️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔴️🔴️🔵️🔴️🔵️⚫⚫
⚫⚫⚫⚫🔴️🔴️🔵️🔴️🔴️🔴️⚫⚫🔴️🔵️🔵️🔴️🔵️🔵️⚫
🔴️🔴️🔴️🔴️🔴️🔵️🔴️🔴️🔵️⚫🔴️⚫⚫🔴️🔵️🔴️🔴️🔴️🔵️
🔴️🔵️🔵️🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫🔴️⚫⚫⚫🔴️🔵️⚫
🔵️⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫🔵️🔴️⚫🔵️🔵️⚫🔵️
⚫🔵️🔵️🔴️⚫⚫🔴️🔴️⚫🔵️🔴️🔴️🔴️🔵️🔵️⚫⚫🔵️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️⚫🔴️🔵️🔵️🔵️🔴️⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️⚫🔴️🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔵️🔵️🔵️🔵️⚫⚫
⚫⚫🔵️🔵️🔵️⚫🔵️🔴️🔵️🔵️🔵️🔵️🔴️🔴️🔴️🔴️🔴️🔵️⚫
⚫⚫⚫🔵️🔴️⚫🔵️🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫⚫🔵️⚫
⚫⚫🔵️⚫🔵️🔴️⚫🔴️⚫🔴️🔴️⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫🔵️🔵️🔵️🔴️🔴️⚫🔴️🔴️⚫🔵️🔴️⚫⚫🔴️⚫🔴️🔵️⚫
⚫🔵️🔴️🔴️🔴️🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫🔴️🔵️🔵️⚫⚫
🔴️🔵️🔵️🔴️🔵️⚫🔵️🔴️🔴️🔴️🔵️🔵️🔴️⚫⚫🔴️🔵️⚫⚫
⚫🔴️🔴️🔵️🔵️🔵️⚫🔵️🔵️🔴️🔴️🔴️🔴️🔴️🔴️⚫🔵️⚫⚫
⚫🔴️⚫🔴️⚫🔵️🔵️🔵️🔴️⚫⚫🔵️🔵️🔴️🔵️🔵️⚫⚫⚫
⚫⚫🔴️🔴️🔵️⚫⚫🔵️🔴️⚫🔴️🔵️⚫🔵️⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔵️⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 26`] = `
"Move: 50

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️⚫⚫
⚫⚫🔴️🔵️🔴️🔴️🔵️⚫⚫⚫🔵️⚫⚫⚫🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫🔴️🔵️🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫🔵️🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️🔴️⚫⚫🔴️⚫⚫⚫⚫🔴️⚫⚫🔴️⚫⚫
⚫⚫🔴️🔵️🔴️🔵️⚫⚫⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 27`] = `
"Move: 100

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 0
White: 2

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔴️🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️⚫⚫
⚫⚫🔴️🔵️🔴️🔴️🔵️⚫⚫⚫🔵️⚫⚫⚫🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔵️⚫⚫⚫
⚫🔴️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔴️🔴️🔴️⚫
⚫🔵️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔵️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫🔵️⚫⚫⚫🔴️⚫⚫🔵️⚫🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫🔴️⚫⚫⚫
⚫🔴️🔴️⚫🔴️🔵️⚫⚫⚫⚫🔵️⚫🔵️⚫⚫⚫⚫⚫⚫
⚫🔵️🔴️🔵️🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫🔵️🔴️🔴️🔴️🔵️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔵️🔴️🔵️🔴️⚫⚫🔴️⚫🔴️🔵️⚫🔴️🔴️🔵️🔴️⚫⚫
⚫🔵️🔴️🔵️🔴️🔵️⚫⚫⚫⚫⚫🔵️⚫⚫⚫🔴️⚫⚫⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;

exports[`GameState > should process game state 28`] = `
"Move: 150

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 3
White: 8

Board:
⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
🔴️🔴️🔵️⚫🔵️⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫⚫⚫⚫
⚫⚫🔴️🔵️⚫⚫🔴️⚫⚫⚫⚫🔴️🔵️🔴️🔵️🔴️🔴️⚫⚫
⚫⚫🔴️🔵️🔴️🔴️🔵️🔵️🔵️⚫🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️🔴️🔵️⚫⚫⚫⚫⚫🔵️⚫⚫⚫
⚫🔴️⚫⚫🔴️🔵️🔵️🔴️🔴️⚫⚫⚫⚫🔴️⚫🔴️🔴️🔴️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️🔵️⚫
⚫⚫⚫🔵️⚫⚫⚫🔵️🔴️🔵️⚫⚫⚫🔵️🔵️🔵️🔵️⚫⚫
⚫⚫⚫⚫⚫🔵️⚫⚫🔵️🔴️⚫⚫🔵️⚫🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫🔴️⚫🔵️🔴️⚫⚫⚫⚫⚫⚫
⚫⚫⚫🔵️🔴️⚫⚫⚫⚫🔴️⚫⚫⚫⚫⚫🔴️⚫🔵️⚫
⚫🔴️🔴️⚫🔴️🔵️⚫⚫⚫⚫🔵️⚫🔵️⚫⚫⚫🔴️⚫⚫
⚫🔵️🔴️🔵️🔴️⚫🔴️⚫🔴️⚫⚫⚫⚫⚫⚫⚫🔴️⚫⚫
⚫⚫🔵️🔴️🔴️🔴️🔵️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔵️🔴️🔵️🔴️⚫⚫🔴️⚫🔴️🔵️⚫🔴️🔴️🔵️🔴️🔴️⚫
⚫🔵️🔴️🔵️🔴️🔵️⚫⚫⚫⚫⚫🔵️⚫⚫🔴️🔴️⚫🔴️⚫
⚫⚫⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫⚫⚫🔴️
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫
"
`;

exports[`GameState > should process game state 29`] = `
"Move: 200

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 8
White: 11

Board:
⚫🔵️⚫⚫⚫⚫⚫⚫⚫🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫
🔴️🔴️🔵️⚫🔵️⚫⚫⚫⚫🔵️🔴️🔴️🔴️🔴️🔴️⚫⚫⚫⚫
⚫⚫🔴️🔵️⚫⚫🔴️⚫⚫⚫🔵️🔴️🔵️🔴️🔵️🔴️🔴️⚫⚫
⚫⚫🔴️🔵️🔴️🔴️🔵️🔵️🔵️⚫🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️⚫⚫⚫⚫⚫🔵️⚫⚫⚫
⚫🔴️⚫⚫🔴️🔵️🔵️⚫⚫🔵️⚫⚫⚫🔴️🔴️🔴️🔴️🔴️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔵️⚫⚫⚫🔵️⚫⚫⚫🔴️🔵️⚫
⚫⚫⚫🔵️⚫🔴️🔵️🔵️🔵️🔵️🔴️⚫⚫🔵️🔵️🔵️🔵️🔵️⚫
⚫⚫⚫⚫⚫🔵️🔴️🔴️🔵️🔴️🔵️⚫🔵️⚫🔴️⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔴️⚫🔵️🔴️🔵️⚫⚫⚫🔴️⚫
⚫⚫⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️🔴️🔴️🔴️🔵️⚫🔴️⚫🔵️⚫
⚫🔴️🔴️⚫🔴️🔵️🔵️🔵️🔴️🔴️⚫🔴️🔵️⚫🔵️⚫🔴️🔴️⚫
🔴️⚫🔴️🔵️🔴️⚫🔴️⚫🔴️⚫🔴️🔵️🔵️⚫⚫⚫🔴️⚫⚫
⚫🔴️🔵️🔴️🔴️🔴️🔵️⚫⚫🔴️⚫⚫⚫⚫⚫⚫⚫⚫⚫
🔴️🔵️🔵️🔴️🔵️🔵️🔵️⚫⚫⚫⚫🔵️⚫🔵️🔵️🔵️🔴️⚫⚫
⚫🔵️🔵️🔴️🔵️🔴️⚫⚫🔴️⚫🔴️🔵️⚫🔴️🔴️🔵️🔴️🔴️⚫
⚫🔵️🔴️🔵️🔴️🔵️⚫🔵️⚫⚫⚫🔵️⚫⚫🔴️🔴️⚫🔴️⚫
⚫⚫⚫🔵️⚫⚫⚫⚫🔵️⚫⚫⚫⚫🔵️🔴️⚫⚫⚫🔴️
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫
"
`;

exports[`GameState > should process game state 30`] = `
"Move: 250

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 10
White: 13

Board:
🔴️⚫🔴️⚫⚫⚫🔵️⚫⚫🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫
🔴️🔴️🔵️🔵️🔵️🔵️🔴️🔵️⚫🔵️🔴️🔴️🔴️🔴️🔴️⚫⚫⚫⚫
⚫🔵️🔴️🔵️⚫🔴️🔴️⚫⚫⚫🔵️🔴️🔵️🔴️🔵️🔴️🔴️⚫⚫
⚫🔴️🔴️🔵️🔴️🔴️🔵️🔵️🔵️⚫🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️⚫⚫⚫⚫⚫🔵️🔵️🔴️⚫
⚫🔴️⚫⚫🔴️🔵️🔵️⚫⚫🔵️⚫🔵️🔴️🔴️🔴️🔴️🔴️🔴️⚫
⚫🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔵️⚫⚫⚫🔵️⚫⚫⚫🔴️🔵️🔴️
⚫⚫⚫🔵️⚫🔴️🔵️🔵️🔵️🔵️🔴️⚫⚫🔵️🔵️🔵️🔵️🔵️⚫
⚫⚫⚫⚫⚫🔵️🔴️🔴️🔵️🔴️🔵️⚫🔵️⚫🔴️🔵️⚫⚫🔵️
⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔴️⚫🔵️🔴️🔵️🔵️🔵️🔴️🔴️🔴️
⚫⚫⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️🔴️🔴️🔴️🔵️🔴️🔴️⚫🔵️⚫
⚫🔴️🔴️⚫🔴️🔵️🔵️🔵️🔴️🔴️⚫🔴️🔵️⚫🔵️⚫🔴️🔴️⚫
🔴️⚫🔴️🔵️🔴️⚫🔴️⚫🔴️⚫🔴️🔵️🔵️🔵️🔴️🔴️🔴️⚫⚫
🔴️🔴️🔵️🔴️🔴️🔴️🔵️🔴️⚫🔴️⚫⚫⚫🔵️🔵️🔴️⚫⚫⚫
🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔵️🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔴️⚫⚫
🔴️🔵️🔵️🔴️🔵️⚫🔵️⚫🔴️🔴️🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔴️⚫
🔴️🔵️🔵️🔵️🔴️🔵️⚫🔵️⚫🔴️🔵️🔵️⚫⚫🔴️🔴️⚫🔴️⚫
⚫🔴️🔵️🔵️⚫⚫⚫⚫🔵️🔵️⚫⚫🔵️🔵️🔴️⚫⚫⚫🔴️
🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️⚫🔴️⚫
"
`;

exports[`GameState > should process game state 31`] = `
"Move: 279

Players:
Black: AaronP 2d
White: houth 1k

Captures:
Black: 11
White: 15

Board:
🔴️🔴️🔴️🔵️⚫⚫🔵️⚫⚫🔵️⚫🔴️⚫⚫⚫⚫⚫⚫⚫
🔴️🔴️🔵️🔵️🔵️🔵️🔴️🔵️⚫🔵️🔴️🔴️🔴️🔴️🔴️⚫⚫⚫⚫
🔴️⚫🔴️🔵️⚫🔴️🔴️⚫⚫⚫🔵️🔴️🔵️🔴️🔵️🔴️🔴️⚫⚫
⚫🔴️🔴️🔵️🔴️🔴️🔵️🔵️🔵️⚫🔵️🔵️🔵️🔵️🔵️🔵️🔴️⚫⚫
⚫⚫🔴️🔴️🔵️🔵️🔵️🔵️⚫🔵️⚫🔵️🔴️⚫⚫🔵️🔵️🔴️⚫
⚫🔴️⚫⚫🔴️🔵️🔵️⚫⚫🔵️⚫🔵️🔴️🔴️🔴️🔴️🔴️🔴️🔴️
⚫🔵️🔴️🔴️🔴️🔴️🔴️🔵️🔵️⚫⚫⚫🔵️🔵️⚫⚫🔴️🔵️🔴️
⚫⚫⚫🔵️⚫🔴️🔵️🔵️🔵️🔵️🔴️⚫⚫🔵️🔵️🔵️🔵️🔵️🔵️
⚫⚫⚫⚫⚫🔵️🔴️🔴️🔵️🔴️🔵️🔵️🔵️⚫🔴️🔵️⚫⚫🔵️
⚫⚫⚫⚫⚫⚫🔵️🔴️🔵️🔴️🔴️🔵️🔴️🔵️🔵️🔵️🔴️🔴️🔴️
⚫⚫⚫🔵️🔴️🔴️🔴️🔴️🔵️🔴️🔴️🔴️🔴️🔵️🔴️🔴️⚫🔵️⚫
⚫🔴️🔴️⚫🔴️🔵️🔵️🔵️🔴️🔴️⚫🔴️🔵️🔵️🔵️🔴️🔴️🔴️⚫
🔴️⚫🔴️🔵️🔴️⚫🔴️🔴️🔴️🔴️🔴️🔵️🔵️🔵️🔴️🔴️🔴️⚫⚫
🔴️🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔴️⚫⚫⚫
🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔵️🔵️🔴️🔵️🔵️🔴️🔵️🔵️🔵️🔴️⚫⚫
🔴️🔵️🔵️🔴️🔵️⚫🔵️🔵️🔴️🔴️🔴️🔵️🔴️🔴️🔴️🔵️🔴️🔴️⚫
🔴️🔵️🔵️🔵️⚫🔵️⚫🔵️🔵️🔴️🔵️🔵️🔴️⚫🔴️🔴️⚫🔴️⚫
🔴️🔴️🔵️🔵️🔵️⚫⚫⚫🔵️🔵️⚫🔵️🔵️🔵️🔴️⚫⚫⚫🔴️
🔴️⚫🔵️⚫⚫⚫⚫⚫⚫⚫⚫⚫🔵️🔴️🔴️🔴️⚫🔴️⚫
"
`;

exports[`GameState > should process game state 32`] = `
"Move: 1

Players:
Black: undefined undefined
White: undefined undefined

Captures:
Black: 0
White: 0

Board:
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫⚫
"
`;
